# FateEngine

./: .gitignore  README.md  fateengine.config.example.json  pyproject.toml  requirements_spec.md
.github/workflows/: ci.yml
adventures/: aurora_station.json  example.json  shadow_chronicles.json
schema/: adventure.schema.json  save.schema.json
src/fateengine/: __init__.py  config.py  observability.py
src/fateengine/controller/: __init__.py  persistence.py  session.py
src/fateengine/llm/: __init__.py  intent.py  prompts.py  provider.py
src/fateengine/loader/: __init__.py  loader.py
src/fateengine/mcp/: __init__.py  effects.py  predicates.py  server.py  state.py  tools.py
src/fateengine/presentation/: __init__.py  cli.py
tests/: test_aurora.py  test_cli.py  test_config.py  test_controller.py  test_effects.py  test_loader.py  test_observability.py  test_persistence.py  test_predicates.py  test_provider.py  test_schema.py  test_serve.py  test_server.py  test_shadow_chronicles.py  test_state.py
