[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fateengine"
version = "0.0.1"
description = "A choose-your-own-adventure engine with authoritative state behind an MCP server and LLM-generated prose."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    # Authoritative state is exposed as a real Model Context Protocol server.
    "mcp>=1.2.0",
    # Adventure / save JSON Schema validation (FR-001, NFR-004).
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# LLM provider adapters (swap freely — integration is provider-agnostic).
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
llm = ["anthropic>=0.40", "openai>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
fateengine = "fateengine.presentation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fateengine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src"]

# Optional / untyped third-party deps (SDKs are lazy-imported; jsonschema ships no stubs).
[[tool.mypy.overrides]]
module = ["anthropic", "openai", "mcp.*", "jsonschema"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
